2008-01-22  Nicolas François  <nicolas.francois@centraliens.net>

	* src/groupadd.c: Fix typo in comment: s/find_new_uid/find_new_gid/

2008-01-22  Nicolas François  <nicolas.francois@centraliens.net>

	* src/useradd.c: s/gid/GID/ in message string.
	* src/useradd.c: Set this string for translation.

2008-01-22  Nicolas François  <nicolas.francois@centraliens.net>

	* man/grpck.8.xml: Fix typo. Remove "the" from "All entries in the
	<filename></filename> are checked [...]"
	* man/grpck.8.xml: Conditionally include the parts mentioning the
	gshadow file (based on SHADOWGRP).
	* man/grpck.8.xml: Add reference to the gshadow(5) manpage
	(conditionally included).

2008-01-22  Nicolas François  <nicolas.francois@centraliens.net>

	* man/grpck.8.xml, man/pwck.8.xml: Indicate that the shadow
	parameter is optional (i.e. a passwd file can be specified without
	a shadow file, and the group file can be specified without the
	gshadow file).

2008-01-22  Nicolas François  <nicolas.francois@centraliens.net>

	* man/grpck.8.xml: Document the options with a list of options,
	as in the pwck(8) manpage.

2008-01-22  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/newgrp.c: Fix segfault when an user returns to an
	unknown GID (either the user was deleted during the user's newgrp
	session or the user's passwd entry referenced an invalid group).
	Add a syslog warning in that case.
	* src/newgrp.c: Add an end of line when reporting an invalid
	password.

2008-01-12  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/useradd.c: Fix the handling of the --defaults option
	(it required an argument, but should behave as -D)
	* NEWS, man/useradd.8.xml: Document the --defaults option, which
	was already described in the useradd's Usage information.

2008-01-06  Nicolas François  <nicolas.francois@centraliens.net>

	* src/passwd.c: Avoid setting the password to a const empty
	string, but set the first char to \0. This avoids a warning.
