@@ -1,3 +1,9 @@
+2008-01-23  Nicolas François  <nicolas.francois@centraliens.net>
+
+	* src/usermod.c: user_newname can only be used in WITH_AUDIT code
+	or when lflg is set. This issue was introduced in the code
+	refactoring of usermod.
+
 2008-01-22  Nicolas François  <nicolas.francois@centraliens.net>
 
 	* src/groupadd.c: Fix typo in comment: s/find_new_uid/find_new_gid/
